Refactor email subscription form in index.html
Updated email form structure and removed name attribute from inputs.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <section class="email-collector">
       <h3>Subscribe for updates</h3>
       <p>Enter your name and email to get notified about new work and offers.</p>
-      <form id="emailForm">
-        <input type="text" name="name" id="emailName" placeholder="Your name" required />
-        <input type="email" name="email" id="emailAddress" placeholder="Email address" required />
-        <button type="submit" class="btn primary">Subscribe</button>
-      </form>
+     <form id="emailForm">
+    <input type="text" id="emailName" placeholder="Your name" required>
+    <input type="email" id="emailAddress" placeholder="Email address" required>
+    <button type="submit">Subscribe</button>
+</form>
       <p class="muted">Emails will be stored in the connected Google Sheet (set up required).</p>
     </section>
   </main>
