--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,13 @@
     <section>
       <h2>Contact Us</h2>
       <p>Want to work together? Fill the form below and we'll get back to you.</p>
-
       <form id="contactForm">
-        <input type="text" id="cname" name="name" placeholder="Your name" required />
-        <input type="email" id="cemail" name="email" placeholder="Email address" required />
-        <input type="tel" id="cphone" name="phone" placeholder="Phone (optional)" />
-        <textarea id="cmessage" name="message" rows="6" placeholder="Message" required></textarea>
-        <button type="submit" class="btn primary">Send Message</button>
-      </form>
-
+    <input type="text" id="cname" placeholder="Your Name" required>
+    <input type="email" id="cemail" placeholder="Your Email" required>
+    <input type="text" id="cphone" placeholder="Phone Number">
+    <textarea id="cmessage" placeholder="Message" required></textarea>
+    <button type="submit">Send</button>
+</form>
       <p class="muted">This form is configured to POST to a Google Apps Script / webhook URL. See README for setup instructions.</p>
     </section>
   </main>
