--- a/index.html
+++ b/index.html
@@ -1,74 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Editkaro.in — Home</title>
-  <link href="styles.css" rel="stylesheet" />
-  <link href="portfolio.html" rel="canonical" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Editkaro.in — Home</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">
-        <img src=/mnt/data/Screenshot 2025-11-25 144917.png alt="Editkaro logo" class="logo-img" />
-        <div class="brand-text">
-          <h1>Editkaro.in</h1>
-          <p class="sub">Video Editing & Social Media Marketing</p>
-        </div>
-      </a>
-      <nav class="nav" role="navigation" aria-label="Main navigation">
-        <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link" href="contact.html">Contact</a>
-      </nav>
+
+<header>
+    <div class="logo">
+        <img src="logo.png" alt="Editkaro logo" />
+        <h2>Editkaro.in</h2>
+        <p>Video Editing & Social Media Marketing</p>
     </div>
-  </header>
 
-  <main class="container main">
-    <section class="hero">
-      <h2>Professional Video Editing & Social Media Marketing</h2>
-      <p>We craft short-form and long-form videos, eCommerce ads, color grading, anime edits and more. Showcase your brand with polished visuals.</p>
-      <div class="cta-row">
-        <a class="btn primary" href="portfolio.html">View Portfolio</a>
-        <a class="btn ghost" href="contact.html">Get In Touch</a>
-      </div>
-    </section>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
-    <section class="features">
-      <div class="feature">
+<section class="hero">
+    <h1>Professional Video Editing & Social Media Marketing</h1>
+    <p>We craft short-form and long-form videos, eCommerce ads, color grading, anime edits and more. Showcase your brand with polished visuals.</p>
+    <button onclick="location.href='portfolio.html'">View Portfolio</button>
+    <button onclick="location.href='contact.html'">Get In Touch</button>
+</section>
+
+<section class="services">
+    <div class="box">
         <h3>Video Editing</h3>
         <p>Short-form edits, montages, color grading and cinematic sequences.</p>
-      </div>
-      <div class="feature">
+    </div>
+    <div class="box">
         <h3>Social Media</h3>
         <p>Tailored content for Instagram Reels, YouTube Shorts, and TikTok.</p>
-      </div>
-      <div class="feature">
+    </div>
+    <div class="box">
         <h3>Marketing</h3>
         <p>Eye-catching promos and product videos that convert viewers into customers.</p>
-      </div>
-    </section>
-
-    <section class="email-collector">
-      <h3>Subscribe for updates</h3>
-      <p>Enter your name and email to get notified about new work and offers.</p>
-     <form id="emailForm">
-    <input type="text" id="emailName" placeholder="Your name" required>
-    <input type="email" id="emailAddress" placeholder="Email address" required>
-    <button type="submit">Subscribe</button>
-</form>
-      <p class="muted">Emails will be stored in the connected Google Sheet (set up required).</p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© Editkaro.in · Built with HTML, CSS & JavaScript</p>
     </div>
-  </footer>
+</section>
 
-  <script src="script.js"></script>
+<section class="subscribe">
+    <h2>Subscribe for updates</h2>
+    <p>Enter your name and email to get notified about new work and offers.</p>
+
+    <!-- FINAL WORKING SUBSCRIBE FORM -->
+    <form id="emailForm">
+        <input type="text" id="emailName" placeholder="Your name" required />
+        <input type="email" id="emailAddress" placeholder="Email address" required />
+        <button type="submit">Subscribe</button>
+    </form>
+
+    <small>Emails will be stored in the connected Google Sheet.</small>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
