--- a/contact.html
+++ b/contact.html
@@ -1,51 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Editkaro.in — Contact</title>
-  <link href="styles.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Editkaro.in — Contact</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">
-        <img src='/mnt/data/Screenshot 2025-11-25 144917.png' alt="Editkaro logo" class="logo-img" />
-        <div class="brand-text">
-          <h1>Editkaro.in</h1>
-          <p class="sub">Video Editing & Social Media Marketing</p>
-        </div>
-      </a>
-      <nav class="nav" role="navigation" aria-label="Main navigation">
-        <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link active" href="contact.html">Contact</a>
-      </nav>
+
+<header>
+    <div class="logo">
+        <img src="logo.png" alt="Editkaro logo" />
+        <h2>Editkaro.in</h2>
+        <p>Video Editing & Social Media Marketing</p>
     </div>
-  </header>
 
-  <main class="container main">
-    <section>
-      <h2>Contact Us</h2>
-      <p>Want to work together? Fill the form below and we'll get back to you.</p>
-      <form id="contactForm">
-    <input type="text" id="cname" placeholder="Your Name" required>
-    <input type="email" id="cemail" placeholder="Your Email" required>
-    <input type="text" id="cphone" placeholder="Phone Number">
-    <textarea id="cmessage" placeholder="Message" required></textarea>
-    <button type="submit">Send</button>
-</form>
-      <p class="muted">This form is configured to POST to a Google Apps Script / webhook URL. See README for setup instructions.</p>
-    </section>
-  </main>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html">About</a>
+        <a href="contact.html" class="active">Contact</a>
+    </nav>
+</header>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© Editkaro.in · Built with HTML, CSS & JavaScript</p>
-    </div>
-  </footer>
+<section class="contact-page">
+    <h1>Contact Us</h1>
+    <p>Send your questions, project requests or collaboration ideas.</p>
 
-  <script src="script.js"></script>
+    <!-- FINAL WORKING CONTACT FORM -->
+    <form id="contactForm">
+        <input type="text" id="cname" placeholder="Your Name" required />
+        <input type="email" id="cemail" placeholder="Your Email" required />
+        <input type="text" id="cphone" placeholder="Phone Number" />
+        <textarea id="cmessage" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
